# Cifar10_CNN_SoC

./: .gitignore  image_reader.py  maxpol.py  maxpool.py
cpp_virgule_fixe/: CMakeLists.txt
cpp_virgule_fixe/include/: cnn.hpp  cnn_top_level.hpp  convolution.hpp  data.hpp  image.hpp  loadImage.hpp  maxpool.hpp  testUtils.hpp
cpp_virgule_fixe/src/: cnn_main.cpp  cnn_top_level.cpp  convolution.cpp  loadImage.cpp
cpp_virgule_fixe/test/: testConvolution2D.cpp  testConvolution3D.cpp  testLoadCoefficents.cpp  testLoadImage.cpp  testPrintImage.cpp
cpp_virgule_fixe_hls/include/: cnn.h  cnn.hh  cnn.hpp  cnn_coefficients.h  cnn_coefficients.hh  cnn_coefficients.hpp  cnn_top_level.h  cnn_top_level.hh  convolution.h  convolution.hh  images.hh  maxpool.hh  maxpool.hpp  perceptron.hh  perceptron.hpp  reshape.h  reshape.hh  reshape.hpp
cpp_virgule_fixe_hls/src/: cnn_main.cpp  cnn_top_level.cpp
cpp_virgule_flotante/: CMakeLists.txt  readme.md
cpp_virgule_flotante/include/: cnn.hpp  cnn_coefficients.hpp  convolution.hpp  loadImage.hpp  perceptron.hpp  reshape.hpp  testUtils.hpp
cpp_virgule_flotante/src/: cnn_main.cpp  cnn_top_level.cpp  loadImage.cpp  maxpool.cpp
cpp_virgule_flotante/test/: testConvolution2D.cpp  testDefines.cpp  testLoadImage.cpp  testMaxpool.cpp  testReshape.cpp
python/: cnn.py  convolution.py  convulution.py  image_crop_and_normalize.py  image_reader.py  maxpool.py  output_coefficients.txt  perceptron.py  read_coeff.py  relu.py  reshape.py  results.txt  save_all_images.py  test3dConvolution.py  test_conv.py  test_crop_image.py  testcnn.py
(+8 files in other folders)
